# qwikswitch-api

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/scripts/: setup
.github/: dependabot.yml
qwikswitchapi/: __about__.py  __init__.py  client.py  constants.py  entities.py  exceptions.py  qs_client.py  qsapi.py  qsexception.py  utility.py
qwikswitchapi/entities/: api_keys.py  apikeys.py  control_result.py  controlresult.py  device_status.py  device_statuses.py  devicestatus.py  devicestatuses.py
qwikswitchapi/utility/: response_parser.py  responseparser.py  url_builder.py  urlbuilder.py
scripts/: setup
src/: __about__.py
src/qwikswitchapi/: __about__.py  __init__.py  api_keys.py  apikeys.py  constants.py  control_result.py  qs_api.py  qs_exception.py  qsapi.py
src/qwikswitchapi/entities/: api_keys.py  apikeys.py  control_result.py  controlresult.py  device_status.py  device_statuses.py  devicestatus.py  devicestatuses.py
src/qwikswitchapi/utility/: response_parser.py  responseparser.py  url_builder.py
tests/: conftest.py  test_qsapi.py
tests/qsapi/: test_control_device.py  test_delete_api_keys.py  test_generate_api_keys.py  test_get_all_device_status.py  test_qs_api.py
