[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwikswitch_api"
version = "0.0.1"
authors = [
  { name="Riaan Hanekom", email="riaan@hanekom.io" },
]
description = "A Python wrapper around the QwikSwitch API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool]
